--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,8 @@
 
 
     <div class="footer">
-        Made by <a href="https://x.com/darianbailey14" target="_blank">darianb</a>
+        Made by <a href="https://x.com/darianbailey14" target="_blank">darianb</a> |
+        <a href="https://github.com/Dsinghbailey/402-api" target="_blank">GitHub Repository</a>
     </div>
 
     <script>
