--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@ BigInt(0.1 * 10 ** 7)
 );
 
 // Example API call
-const url = "https://402api.com/text-to-image?prompt=a%20blue%20ball";
+const url = "https://402api.com/word-count?text=hello%20world";
 
 fetchWithPayment(url, {
 method: "GET",
