mit license, update to test net, fix missing variables, update index

--- a/public/index.html
+++ b/public/index.html
@@ -193,8 +193,11 @@
     </header>
 
     <div class="card">
-        <h3 class="collapsible-trigger">Quickstart (Requires a wallet with Base USDC)</h3>
+        <h3 class="collapsible-trigger">Quickstart</h3>
         <div class="collapsible-content">
+            <p><strong>Step 0 :</strong> <a href="https://faucet.circle.com/" target="_blank">Get Base Sepolia USDC</a>
+                (Make sure to select Base Sepolia in the network dropdown)</p>
+
             <p><strong>Step 1:</strong> Install required dependencies</p>
             <div style="position: relative;">
                 <button class="copy-btn" data-copy-target="quickstart-install" title="Copy to clipboard">Copy</button>
