--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 <body>
     <header>
         <h1>402 API</h1>
-        <p>A collection of demo api tools using the <a href="https://www.x402.org/" target="_blank">402 payment</a>
+        <p>A collection of demo api tools using the <a href="https://www.x402.org/" target="_blank">x402 payment</a>
             protocol
         </p>
     </header>
